Modificações seção 4 após reunião com Lucas s rev.

--- a/Articles/VECM/Empirical_Review.org
+++ b/Articles/VECM/Empirical_Review.org
@@ -163,11 +163,9 @@ In order to do so, they estimate a VECM between a monetary aggregate (M2), GDP, 
 They report an increasing contribution of long-term mortgages interest rate in order to explain resident investment variance after those institutional changes mentioned above.
 
 
-Table ref:tab:summary_models presents an overview of the discussed topics and its main conclusions.
-From this brief review of the literature, we conclude that may be the only consensus about the determinants of residential investment is on house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy).
-Some authors deflate the rate of interest by the CPI, others use nominal interest rate to capture the effect of monetary illusion.
-In the next section, we will present a particular way of combining house prices and mortgage rate of interest in a single index that we will use on our econometric estimation.
-
+Table ref:tab:summary_models shows an overview of the discussed topics and its main conclusions.
+Each table entry contains the paper's sample, estimation method and its covariates.
+In the next section, we purpose and estimate an alternative for the residential investment in the US.
 
 
 #+BEGIN_EXPORT latex
