--- a/Reunioes.org
+++ b/Reunioes.org
@@ -126,3 +126,34 @@ Como é o caso de que $\pi = 1$.
     - Países com instituições distintas tem um mesmo fenômeno
 *** Ensaio 2
     Falar que vai analisar a inflação de ativos e não a taxa própria no vec
+
+* Artigos
+
+** VECM
+
+*** <2021-03-22 seg> Seção 4
+**** Tirar taxa de juros real da figura 6
+**** Seção 4.1 mais direta com o ponto
+**** Abrir seção 4.2 com as equação 3
+***** Mocumentary com cointegração
+***** Começar com teste de cointegração antes de apresentar a equação 3
+***** Transformação de yeojohson
+**** Problema, não esta discutindo especulação e bolhas
+**** PDF com todos os gráficos que não foram utilizados para o Franklin
+**** Taxa própria parece a taxa própria do Sraffa: deflaciona juros adequado com preço adequado em uma forma funcional mais simples possível
+**** Tudo que é estratégia de estimação vai para a 4.2
+**** Transformar figura 8 em apêndice
+**** Final seção 3 com apenas uma frase
+**** Olhar forma dos outros artigos empíricos para estruturar a seção 4.2
+**** Testar para o fim de 2019
+***** Pós envio ao Franklin
+***** Rever data com a quebra estrutural
+**** Figura 7 para anexo; informação da figura 8 no texto e figura 9 fora
+**** Lucas: fundamentação econômica das defasagens; autonomia da taxa própria em relação ao investimento residencial (Marcar)
+**** Mesclar 4.3 com 4.4 e checar se é necessário comparar com a literatura
+**** Tirar nome do Franklin
+**** Ver interpretação dos coeficientes de longo-prazo
+***** Ver Perez-Montiel
+**** Citar paper SFC
+**** Reduzir notas de rodapé
+**** Remover figura 5
