--- a/Articles/VECM/VECM.org
+++ b/Articles/VECM/VECM.org
@@ -34,6 +34,10 @@ plt.rc("legend", fontsize=14)  # legend fontsize
 plt.rc("axes", labelsize=22)  # fontsize of the x and y labels
 #+END_SRC
 
+#+RESULTS:
+:results:
+:end:
+
 ** Save plot
 
 #+BEGIN_SRC python
@@ -50,51 +54,46 @@ def salvar_grafico(file_name, extension="png", pasta="./figs/"):
 *** Own houses rate of interest
 
 #+BEGIN_SRC python :results graphics file :file ./figs/TxPropria_Investo.png
-start=dt(1987,1,1)
-end=dt(2019,10,1)
+start = dt(1987, 1, 1)
+end = dt(2019, 10, 1)
 
 df = web.DataReader(
-    [
-        "PRFI",
-        "CSUSHPISA",
-        "MORTGAGE30US",
-        "CPIAUCSL"
-    ], 
-    'fred', 
-    start, 
-    end
+    ["PRFI", "CSUSHPISA", "MORTGAGE30US", "CPIAUCSL"], "fred", start, end
 )
 
-df.columns = [
-    "Residential Investment", 
-    "House Prices", 
-    "Interest rate",
-    "Prices"
-]
+df.columns = ["Residential Investment", "House Prices", "Interest rate", "Prices"]
 df.index.name = ""
 
 
-df['Interest rate'] = df['Interest rate'].divide(100)
-df = df.resample('M').last()
+df["Interest rate"] = df["Interest rate"].divide(100)
+df = df.resample("M").last()
 
-df['House Prices'] = df['House Prices']/df['House Prices'][0]
-df = df.resample('Q').last()
-df["Inflation"]= df["House Prices"].pct_change()
+df["House Prices"] = df["House Prices"] / df["House Prices"][0]
+df = df.resample("Q").last()
+df["Inflation"] = df["House Prices"].pct_change()
 df["General inflation"] = df["Prices"].pct_change()
-df["Own interest rate"] = ((1+df["Interest rate"])/(1+df["Inflation"])) -1
-df["Real mortgages interest rate"] = ((1+df["Interest rate"])/(1+df["General inflation"])) -1
+df["Houses own rate of interest"] = ((1 + df["Interest rate"]) / (1 + df["Inflation"])) - 1
+df["Real mortgages interest rate"] = (
+    (1 + df["Interest rate"]) / (1 + df["General inflation"])
+) - 1
 
-df['$g_{I_h}$'] = df["Residential Investment"].pct_change()
+df["$g_{I_h}$"] = df["Residential Investment"].pct_change()
 
-    
-fig, ax = plt.subplots(figsize=(19.2,10.8))
 
-df[['Real mortgages interest rate', "Own interest rate", '$g_{I_h}$']].plot(ax=ax, lw=3)
+fig, ax = plt.subplots(figsize=(19.2, 10.8))
+
+df[
+    [
+        # 'Real mortgages interest rate',
+        "Houses own rate of interest",
+        "$g_{I_h}$",
+    ]
+].plot(ax=ax, lw=3, color=("black", "gray"))
 
 ax.tick_params(axis="both", which="major", labelsize=15)
 sns.despine()
-salvar_grafico("TxPropria_Investo") 
-plt.close('all')
+salvar_grafico("TxPropria_Investo")
+plt.close("all")
 #+END_SRC
 
 #+RESULTS:
@@ -832,10 +831,6 @@ class FEVD(object):
         sns.despine()
         return fig
 #+END_SRC
-
-#+RESULTS:
-:results:
-:end:
 
 *** Structural break test
 
@@ -3967,11 +3962,7 @@ Null Hypothesis: The process contains a unit root.
 Alternative Hypothesis: The process is weakly stationary.
 :end:
 
-
-* VECM :ignore:
-
-** Houses' own interest rate and residential investment growth rate in the US	Economy
-#+LATEX: \label{sc:own} 
+** Fora
 
 
 textcite:arestis_residential_2015 argue that the last house bubble episode (during the 2000s to the US economy) changed the traditional view on the motivations to acquire housing.
@@ -3996,60 +3987,6 @@ As discussed before, this housing boom was possible because of some changes of h
 \end{figure}
 #+end_export
 
-
-*** Descrição mais formal da taxa própria (preparação para VECM) :ignore:
-
-
-Next, we describe the relationship between residential investment growth rate ($g_{I_h}$) and houses' own interest rate ($own$) as proposed by textcite:teixeira_crescimento_2015.
-Next, we will present the hypothesis to be tested on the Section ref:sec:estimation. To obtain this relationship, we deflate mortgage interest rate ($r_{mo}$) by real estate inflation ($\pi$) as follows:
-
-#+begin_export latex
-$$
-g_{I_h} = \phi_0 - \phi_1\cdot \overbrace{\left(\frac{1+r_{mo}}{1+\pi} - 1\right)}^{own}
-$$
-
-\begin{equation}
-g_{I_h} = \phi_0 - \phi_1\cdot own
-\end{equation}
-#+end_export
-
-where $\phi_0$ stands for long-term determinants (/e.g./ demographic factors, housing and credit policies, etc.) while $\phi_1$ captures the demand for real estate arising from expectations of capital gains resulting from speculation with the existing dwellings stock.
-This particular real interest rate is the most relevant for households since it is the real cost in real estate from buying real estate  \cite[p.~53]{teixeira_crescimento_2015}.
-
-Figure ref:propria_investo shows how this deflation procedure is more adequate than a general price index --- as \textcite[p.~143--6]{fair_macroeconometric_2013} does --- to describe the housing dynamics. It worth noting that during a houses' bubble period, it is real estate inflation that governs own's interest rate dynamics.
-Therefore, the lower this rate is, the greater the capital gains (in real estate) for speculating with real estate will be. This negative relation between houses' own interest rate and residential investment is shown in Figure ref:propria_investo in which this particular real interest rate has been gradually decreased over the real estate boom (2002-5).
-
-Despite shedding light on some relevant relationships, \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition was not evaluated econometrically and this will be done in Section \ref{sec:estimation}. To do so, we assume the following long-run relationship:
-
-#+begin_export latex
-\begin{equation}
-g_{I_{h_{t}}} = \phi_0 - \phi_1\cdot own_t
-\end{equation}
-#+end_export
-
-therefore, if these time-series are co-integrated, we specify the short-run adjustment process through the following VECM:
-#+begin_export latex
-\begin{equation}
-\begin{cases}
-\Delta own_t = \delta_{1} + \alpha_1\left(g_{I_{h_{t-1}}} - \phi_0 + \phi_1\cdot own_{t-1}\right) + {\sum^{N}_{i=1}}\beta_{1,i}\cdot \Delta g_{I_{h_{t-i}}} +
-\sum^{N}_{i=1}\gamma_{1,i}\cdot \Delta own_{t-i} +\varepsilon_{t,1}
-\\
-\Delta g_{I_{h_{t}}} = \delta_{2} + \alpha_2\left(g_{I_{h_{t-1}}} - \phi_0 + \phi_1\cdot own_{t-1}\right) + \sum^{N}_{i=1}\beta_{2,i}\cdot \Delta g_{I_{h_{t-i}}} +
-\sum^{N}_{i=1}\gamma_{2,i}\cdot \Delta own_{t-i} +\varepsilon_{t,2}
-\end{cases}
-\end{equation}
-#+end_export
-
-where $\delta_s$ indicate linear trend (level);
-$\alpha_{is}$ are the error correction coefficients;
-$\beta_s$ and $\gamma_s$ are coefficients associated with lagged $g_{I_h}$ and $own$ respectively and; $\varepsilon_s$ are the residuals.
-Based on \textcite{teixeira_crescimento_2015}, we depict the expected results in Table \ref{resultados_esperados} below:
-
-Figure ref:Fig:CreditFDICIA illustrates the relevance of institutional reforms due to the savings and loans crisis throughout the 80's and early 90's.
-This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households.
-As a consequence, real estate finance has increased considerably in the following periods.
-
-
 #+BEGIN_EXPORT latex
 \begin{figure}[htb]
 	\centering
@@ -4059,49 +3996,11 @@ As a consequence, real estate finance has increased considerably in the followin
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
 \end{figure}
 #+END_EXPORT
-\input{./tabs/hypothesis.tex}
-
-** Data and estimation strategy
-#+LATEX: \label{sec:estimation}
 
 
-In this section, we employ a model to test whether or not houses own rate of interest describes residential investment growth rate dynamics[fn::Scripts are available under request.].
-Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes (FDIC e
-FIRREA) due to the Savings and Loans crisis (see Table ref:structbreak in appendix ref:appen:A for structural break tests).
-We rely on the following  quarterly seasonally adjusted data: (i) 30-Year fixed mortgage interest rate (MORTGAGE30US, resampled by end of period), private residential investment (PRFI, growth rate as percent change from the previous quarter) and Case-Shiller home price index
-(CSUSHPISA, resampled by end of period). Figure ref:propria_investo  shows the original series.
-
-#+begin_export latex
-\begin{figure}[htb]
-	\centering
-	\caption{Residential investment growth rate vs. Houses Own interest rate}
-	\label{propria_investo}
-	\includegraphics[width=\textwidth]{./figs/TxPropria_Investo.png}
-	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
-\end{figure}
-#+end_export
+Figure ref:Fig:CreditFDICIA illustrates the relevance of institutional reforms due to the savings and loans crisis throughout the 80's and early 90's.
 
 
-Next, we applied textcite:yeo_new_2000 transformation since these series are volatile. We use this procedure instead of a standard textcite:box_analysis_1964 transformation  because it can be applied to non-positive values.
-Then, we employ standard unit root tests (see Table ref:unitroot in appendix ref:appen:A) as well as textcite:johansen_estimation_1991 procedure to assess whether houses' own interest rate and residential investment growth rate share a common long-run trend (see Table ref:Johansen in appendix ref:appen:A).
-Our series are co-integrated at 5% significance level which allows us to estimate a error correction model and evaluate the previous hypothesis cite:enders_applied_2014.
-
-#+begin_export latex
-\begin{figure}[htb]
-	\centering
-	\caption{Time-series with \textcite{yeo_new_2000} transformation}
-	\label{YeoJhonson}
-	\includegraphics[width=\textwidth]{./figs/YeoJohnson_All.png}
-	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
-\end{figure}
-#+end_export
-
-
-
-
-The next step is to define the model order. According to usual information criteria, both first and forth lags are eligible (see Table ref:criterios in appendix ref:appen:A).
-Although parsimonious, we argue that the first lag has no empirical support.
-Considering the average construction time (from approval to completion), we should include at least the second lag in order to incorporate homes built for capital gains purposes which only take place once the construction is completed (see Figure ref:meses).
 
 #+begin_export latex
 \begin{figure}[H]
@@ -4113,24 +4012,6 @@ Considering the average construction time (from approval to completion), we shou
 \end{figure}
 #+end_export
 
-This procedure, however, it is not enough to determine the model lag order selection.
-Since residential investment (newly constructed homes) is significantly smaller than existing housing stock, we verify an price-effect even if the construction is unfinished[fn::textcite:poterba_tax_1984, for instance, suggests that the time that houses takes to be sold should be include.].
-We argue that this price effect is a result of future real estate inflation.
-Such dynamic could be captured by the *expected* houses' own interest rate.
-However, such series does not exist.
-So, we use lagged houses' own interest rate as a first approximation to the expected one[fn::This procedure is similar to textcite:keynes_general_1937 "practical theory of the future" in which decision-making process for buying a new property depends on expectations/conventions based on past observations.
-In summary, in the absence of a series for the expected own interest rate, the lag of this variable will be used as a proxy for the future one.
-].
-
-In order to display the relation between lagged own interest rate and current residential investment growth rate, Figure \ref{defasagens} depicts one variable of interest against the other variable lagged according to lags that minimize the information criteria (1 and 4 respectively)[fn::Similar data plot can be seen in \textcite[p.~16]{girardi_autonomous_2015}.].
-This simple procedure allows checking if there is any relationship between the expected own interest rate (in this case, lagged effective rate) and residential investment growth rate[fn::In order to consider non-linearities, we presented quadratic regression between variables of interest.].
-In the same Figure, we verify the non-occurrence of the inverse relationship from residential investment to own interest rate.
-Since residential investment (flow) is much lower than the existing stock of dwellings, it is expected that such relationship does not exist.
-In summary, speculation with the dwellings stock generates inflation of these assets, which affects the construction of new houses (flow) and not the other way round[fn::It is worth noting a particular aspect of house price formation: land scarcity. As a consequence, speculation with residences is, in the end, speculation with land (the only scarce resource involved in its production) and, therefore, it is relevant for speculation with the dwellings stock. 
-	\textcite[p.~349, emphasis added]{leamer_housing_2007} points out this particularity as follows:
-	@@latex:\begin{quotation}@@
-		It’s not the structure that has a volatile price; *it's the land*. Where there is plenty of buildable land, the response to an increase is demand for homes is mostly to build more, not to increase prices. Where there is little buildable land, the response to an increase in demand for homes is mostly a price increase, sufficient to discourage buyers enough to reequilibrate the supply and demand.
-	@@latex:\end{quotation}@@].
 
 #+begin_export latex
 \begin{figure}
@@ -4142,9 +4023,131 @@ In summary, speculation with the dwellings stock generates inflation of these as
 \end{figure}
 #+end_export
 
-Considering this theoretical and econometric discussion of model order specification, we estimate a four lag VEC  (see Table ref:Estimacao)[fn::	In addition to being theoretically based, this lag also generates homoscedastic residuals without serial auto-correlation (see Table ref:testes_resduos in Appendix ref:appen:A).]. 
-#+latex: % Figure ref:residuos displays an inspection of the residuals while
-Table ref:testes_resduos in Appendix ref:appen:A presents a few residual tests to check the model's specification while Table ref:tab:robust presents some robustness check.
+#+BEGIN_latex
+\begin{equation}
+\Delta own_t = \delta_{1} + \alpha_1\left(\sigma_{t-1}) + \sum^{N}_{i=1}\beta_{1,i}\cdot \Delta g_{I_{h_{t-i}}} +
+\sum^{N}_{i=1}\gamma_{1,i}\cdot \Delta own_{t-i} +\varepsilon_{t,1}
+\\
+\Delta g_{I_{h_{t}}} = \delta_{2} + \alpha_2\left(\sigma_{t-1}) + \sum^{N}_{i=1}\beta_{2,i}\cdot \Delta g_{I_{h_{t-i}}} +
+\sum^{N}_{i=1}\gamma_{2,i}\cdot \Delta own_{t-i} +\varepsilon_{t,2}
+\end{equation}
+#+END_latex
+
+* VECM :ignore:
+
+** Houses' own interest rate and residential investment growth rate in the US Economy
+#+LATEX: \label{sc:own} 
+
+From the previous review of the empirical literature, we conclude that may be the only consensus about the determinants of residential investment is on house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy).
+Some authors deflate the rate of interest by the CPI, others use nominal interest rate to capture the effect of monetary illusion.
+In this section, we present a particular and parsimonious way of combining house prices and mortgage rate of interest in a single index that we will use on our econometric estimation.
+
+Based on the recent US housing boom episode and its consequences, textcite:teixeira_crescimento_2015  proposed the houses own rate of interest ($own$).
+Inspired by citeauthor*:sraffaDrHayekMoney1932 citeyear*:sraffaDrHayekMoney1932 own commodity rate, this variable is the mortgage interest rate ($r_{mo}$) deflated by real estate inflation ($\pi$) as follows:
+#+BEGIN_latex
+\begin{equation}
+owm =  \overbrace{\left(\frac{1+r_{mo}}{1+\pi} - 1\right)}
+\end{equation}
+#+END_latex
+In sum, this particular real interest rate is the most relevant for households since it is the real cost in real estate from buying real estate  \cite[p.~53]{teixeira_crescimento_2015}.
+
+textcite:teixeira_crescimento_2015 also show that this simple procedure is relevant to describe residential investment growth rate ($g_{I_{h}}$).
+Figure ref:propria_investo illustrates how this deflation procedure is more adequate than a general price index --- as
+\textcite[p.~143--6]{fair_macroeconometric_2013} does --- to describe the residential investment dynamics.
+Equation ref:gihown presents the negative relation between houses own rate of interest and residential investment in the simplest functional form as possible:
+#+begin_export latex
+\begin{equation}
+\label{gihown}
+g_{I_h} = \phi_0 - \phi_1\cdot own
+\end{equation}
+#+end_export
+where $\phi_0$ stands for long-term determinants (/e.g./ demographic factors, housing and credit policies, etc.) while $\phi_1$ captures the demand for real estate arising from expectations of capital gains resulting from speculation with the existing dwellings stock.
+
+
+#+begin_export latex
+\begin{figure}[htb]
+	\centering
+	\caption{Residential investment growth rate vs. Houses Own interest rate}
+	\label{propria_investo}
+	\includegraphics[width=\textwidth]{./figs/TxPropria_Investo.png}
+	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
+\end{figure}
+#+end_export
+
+Despite shedding light on some relevant relationships, \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition was not evaluated econometrically.
+Before we move forward to the empirical estimations, it is worth noting that during a housing bubble period, it is real estate inflation that governs houses own rate of interest.
+So, the lower this rate is, the greater the capital gains (in real estate) for speculating with real estate will be.
+
+
+** Data and estimation strategy
+#+LATEX: \label{sec:estimation}
+
+
+In this section, we estimate a model to test whether or not houses own rate of interest describes residential investment growth rate movements.
+Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis (see Table ref:structbreak in appendix ref:appen:A for structural break tests)[fn::This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households. As a consequence, real estate finance has increased considerably in the following periods.]
+We rely on the following  quarterly seasonally adjusted data: (i) 30-Year fixed mortgage interest rate (MORTGAGE30US, resampled by end of period), private residential investment (PRFI, growth rate as percent change from the previous quarter) and Case-Shiller home price index
+(CSUSHPISA, resampled by end of period).
+
+
+
+Since we are interested in growth rate variables, we apply textcite:yeo_new_2000 transformation procedure due to non-positive values.
+Additionally, we consider mortgage interest rate as an exogenous variable in all tests and estimations.
+Then, we employ standard unit root tests (see Table ref:unitroot in appendix ref:appen:A) as well as textcite:johansen_estimation_1991 procedure to assess whether houses own rate of interest and residential investment growth rate share a common long-run trend (see Table ref:Johansen in appendix ref:appen:A).
+We report a 5% significance level which allows us to estimate a error correction model cite:enders_applied_2014.
+To do so, we assume the following long-run relationship:
+
+#+BEGIN_latex
+\begin{equation}
+\label{gihLR}
+g_{I_{h_{t}}} = \phi_{0} - \phi_{1}\cdot own_{t}
+\end{equation}
+#+END_latex
+next, we specify the short-run adjustment process of Equation ref:gihLR as follows:
+
+#+begin_export latex
+\begin{equation}
+\begin{bmatrix}
+\Delta own_{t}\\
+\Delta g_{I_{h_{t}}}
+\end{bmatrix} = \begin{bmatrix}\delta_{1}\\\delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t}}} - \phi_{0} + \phi_{1}\cdot own_{t}\\g_{I_{h_{t}}} - \phi_{0} + \phi_{1}\cdot own_{t}\end{bmatrix} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} \Delta g_{I_{h_{t-i}}} & \gamma_{1,i} \Delta own_{t-i}\\\beta_{2,i} \Delta g_{I_{h_{t-i}}} & \gamma_{2,i} \Delta own_{t-1} \end{bmatrix} + \varepsilon_{t}
+\end{equation}
+#+end_export
+where $\delta_s$ indicate linear trend (level);
+$\alpha_{is}$ are the error correction coefficients;
+$\beta_s$ and $\gamma_s$ are coefficients associated with lagged $g_{I_h}$ and $own$ respectively and; $\varepsilon_s$ are the residuals.
+Based on \textcite{teixeira_crescimento_2015}, we depict the expected results in Table \ref{resultados_esperados} below:
+
+
+\input{./tabs/hypothesis.tex}
+
+
+The next step is to define the model order. According to usual information criteria, both first and forth lags are eligible (see Table ref:criterios in appendix ref:appen:A).
+Although parsimonious, we argue that the first lag has no empirical support.
+According to the Survey of Construction (Citar), the average construction time (from approaval to completion from 1976 to 2018) for a family unity for sale is approximately seven months.
+Thus, we should include at least the second lag in order to incorporate homes built for capital gains purposes which only take place once the construction is completed.
+
+DISCUSSÃO ECONÔMICA (LUCAS).
+We argue that there is other economic intuition to explain the forth lag specification.
+Residential investment (newly constructed homes) is significantly smaller than existing housing stock, we verify an price-effect even if the construction is unfinished[fn::textcite:poterba_tax_1984, for instance, suggests that the time that houses takes to be sold should be include.].
+We argue that this price effect is a result of future real estate inflation.
+Such dynamic could be captured by the *expected* houses' own interest rate.
+However, such series does not exist.
+So, we use lagged houses' own interest rate as a first approximation to the expected one[fn::This procedure is similar to textcite:keynes_general_1937 "practical theory of the future" in which decision-making process for buying a new property depends on expectations/conventions based on past observations.
+In summary, in the absence of a series for the expected own interest rate, the lag of this variable will be used as a proxy for the future one.
+].
+
+*Lucas:* Este parágrafo descreve a figura que descartamos, mas imaginei que poderia aproveitar alguma coisa para discutir a autonomia da taxa própria em relação ao investimento residencial (aproveitei e mudei a nota de rodapé do Leamer para o corpo do texto).
+In order to display the relation between lagged own interest rate and current residential investment growth rate, Figure \ref{defasagens} depicts one variable of interest against the other variable lagged according to lags that minimize the information criteria (1 and 4 respectively).
+This simple procedure allows checking if there is any relationship between the expected own interest rate (in this case, lagged effective rate) and residential investment growth rate.
+In the same Figure, we verify the non-occurrence of the inverse relationship from residential investment to own interest rate.
+Since residential investment (flow) is much lower than the existing stock of dwellings, it is expected that such relationship does not exist.
+In summary, speculation with the dwellings stock generates inflation of these assets, which affects the construction of new houses (flow) and not the other way round.
+It is worth noting a particular aspect of house price formation: land scarcity. As a consequence, speculation with residences is, in the end, speculation with land (the only scarce resource involved in its production) and, therefore, it is relevant for speculation with the dwellings stock \cite[p.~349]{leamer_housing_2007}.
+
+
+Considering this theoretical and econometric discussion of model order specification, we estimate a four lag VEC  (see Table ref:Estimacao).
+In addition to being theoretically based, this lag order also generates homoscedastic residuals without serial auto-correlation (see Table ref:testes_resduos in Appendix ref:appen:A).
+Table ref:testes_resduos in Appendix ref:appen:A presents residual tests to check the model's specification while Table ref:tab:robust presents some robustness check.
 On the following subsection, we analyze the results and compare with the theoretical expected ones presented in Table ref:resultados_esperados above.  
 
 
@@ -4159,8 +4162,8 @@ The short-term relationship between $own$ and $g_{Ih}$ ($\beta_{1, is}$ coeffici
 In addition, coefficients $\gamma_{2,s}$ are negative and statistically significant at 5%, supporting hypothesis 6 (see Table  ref:Estimacao).
 We also find statistically significant coefficients related to demand for houses for non-speculative reasons ($\phi_0$), validating proposition 5.
 On the other hand, the error correction parameter is statistically significant only for the residential investment growth rate equation.
-In this sense, $own$ is weakly exogenous compared to $g_{I_h}$ while houses' own interest rate Granger-causes $g_{I_h}$, supporting the hypothesis (2) and (3).
-In conclusion, our estimation results are in line with the hypothesis presented above and can be summarized as follows: houses' own interest rate determines --- but is not determined by --- residential investment growth rate and these variables present a negative long-term relationship (are co-integrated).
+In this sense, $own$ is weakly exogenous compared to $g_{I_h}$ while houses own rate of interest Granger-causes $g_{I_h}$, supporting the hypothesis (2) and (3).
+In conclusion, our estimation results are in line with the hypothesis presented above and can be summarized as follows: houses own rate of interest determines --- but is not determined by --- residential investment growth rate and these variables present a negative long-term relationship (are co-integrated).
 
 #+begin_export latex
 \begin{table}[h!]
@@ -4180,10 +4183,13 @@ In conclusion, our estimation results are in line with the hypothesis presented 
 \end{figure}
 #+end_export
 
-Figure ref:fevd display the forecast error variance decomposition (FEVD) which reports houses own interest rate in describing residential investment growth rate dynamics[fn:: It is important to note that the number of variables (two) used generates similar  of a Structural VEC, which means that Choleski's decomposition is sufficient to analyze the (orthogonalized) impulse response function.].
-We report that own interest rate has  depicted  $g_{Ih}$ --- while the reverse is not valid --- after the first quarter.
-In addition, we find that such contribution is greater than 50% beyond the third quarter.
-Therefore, houses' own interest rate is explained mainly by itself and explains $g_{I_h}$ considerably.
+
+DISCUSSÃO DO COEFICIENTE DE COINTEGRAÇÃO
+
+Figure ref:fevd display the forecast error variance decomposition (FEVD) which reports houses own rate of interest in describing residential investment growth rate dynamics[fn:: It is important to note that the number of variables (two) used generates similar  of a Structural VEC, which means that Choleski's decomposition is sufficient to analyze the (orthogonalized) impulse response function.].
+We report that houses own rage of interest has  depicted  $g_{Ih}$ --- while the reverse is not valid --- after the first quarter.
+In addition, we find that such contribution is greater than 50% beyond the third quarter (dashed line in Figure ref:fevd).
+Therefore, houses own rate of interest is explained mainly by itself and explains $g_{I_h}$ considerably.
 
 #+begin_export latex
 \begin{figure}[H]
@@ -4195,11 +4201,11 @@ Therefore, houses' own interest rate is explained mainly by itself and explains 
 \end{figure}
 #+end_export
 
-Next, we analyze the orthoganilized impulse response function (Figure ref:irf).
-In summary, we report a stable system since the increase in $g_{I_h}$ on itself are dampened over time while equivalent shock on own interest rate has a non-explosive permanent effect.
+Next, we analyze the orthogonilized impulse response function (Figure ref:irf).
+We report a stable system since the increase in $g_{I_h}$ on itself are dampened over time while equivalent shock on own interest rate has a non-explosive permanent effect.
 On the other hand, an increase in $g_{I_h}$ has a null effect over $own$.
 The most relevant result reported in Figure ref:irf is the considerable and lasting negative effect due to an increase in own interest rate over $g_{I_h}$, validating \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition.
-In short, our results shows that an increase in mortgage interest rate (equivalent to an increase in houses' own interest rate) has a negative and persistent effect on residential investment growth rate while an increase in real estate inflation  has an opposite effect.
+
 #+begin_export latex
 \begin{figure}[H]
 	\centering
@@ -4210,19 +4216,14 @@ In short, our results shows that an increase in mortgage interest rate (equivale
 \end{figure}
 #+end_export
 
-** Comparison with previous studies
 
-In this section,  we contrast our findings with those obtained by the literature.
-At this stage, we restrict the comparison with  textcite:gauger_residential_2003 and textcite:arestis_residential_2015 since we share the same topic.
+Next,  we contrast our findings with those obtained by the literature.
+At this stage, we restrict the comparison with  textcite:gauger_residential_2003 and textcite:arestis_residential_2015 since both of them analizy residential investment determinants in a comparable timespan.
 Similar to textcite:gauger_residential_2003, we report that mortgage interest rate is relevant for residential investment.
-Despite some theoretical differences, our estimations are in line with textcite:arestis_residential_2015 (at least for the US): house prices are relevant to describe residential investment growth rate.
-However, they report insignificant coefficients for mortgages nominal interest rate which is at odds with our conclusions.
-In summary, our estimation reports that houses' own interest rate has a prominent role in describing residential investment growth rate movements. 
-It is worth noting that despite the amplitude of VEC order, our model is parsimonious considering the number of variables used.
+Our estimations are also in line with textcite:arestis_residential_2015 (at least for the US).
+However, they report statistically insignificant coefficients for mortgages nominal interest rate which is at odds with our conclusions.
+In summary, our estimation reports that houses own rate of interest has a prominent role in describing residential investment growth rate movements.
+Finally, it is worth noting that despite the amplitude of VEC order, our model is parsimonious considering the number of variables used.
 Thus, we conclude that our estimation depicts residential investment growth rate satisfactorily.
 On the following section we present some concluding remarks.
 
-#+begin_comment
-%It worth remembering that one of the authors' hypotheses is that residential investment depends on disposable income (is induced expenditure).
-%However, the authors themselves find that such results are not statistically significant for the US. Therefore, we can compare this result with our model.
-#+end_comment
