--- a/Articles/VECM/Empirical_Review.org
+++ b/Articles/VECM/Empirical_Review.org
@@ -163,8 +163,9 @@ In order to do so, they estimate a VECM between a monetary aggregate (M2), GDP, 
 They report an increasing contribution of long-term mortgages interest rate in order to explain resident investment variance after those institutional changes mentioned above.
 
 
-Table ref:tab:summary_models shows an overview of the discussed topics and its main conclusions.
-Each table entry contains the paper's sample, estimation method and its covariates.
+Finally, Table ref:tab:summary_models shows an overview of the discussed papers.
+Each table entry contains its sample, estimation method and covariates.
+In general, some authors deflate the rate of interest by the CPI, while others use nominal interest rate to capture the effect of monetary illusion.
 In the next section, we purpose and estimate an alternative for the residential investment in the US.
 
 
