--- a/Articles/VECM/Petrini_VECM_2021.tex
+++ b/Articles/VECM/Petrini_VECM_2021.tex
@@ -1,4 +1,4 @@
-% Created 2021-03-22 seg 18:28
+% Created 2021-03-23 ter 18:07
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -35,6 +35,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \newcolumntype{s}{>{\hsize=.45\hsize}X}
 \newcolumntype{m}{>{\hsize=.9\hsize}X}
 \usepackage[english]{babel}
+\usepackage[bottom]{footmisc}
 %\usepackage{endfloat}
 \usepackage{authblk}
 \author[1]{Gabriel Petrini}
@@ -63,7 +64,7 @@ while the other way round does not occur.
 
 
 \section{Introduction}
-\label{sec:org522b5cc}
+\label{sec:org562c8d4}
 \label{sec:Introduction}
 Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
 As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
@@ -81,7 +82,7 @@ The results for all statistical tests are provided in Appendix \ref{appen:A}.
 
 
 \section{Residential investment, economic growth and business cycle in the US economy}
-\label{sec:org45e0550}
+\label{sec:org2fc9861}
 \label{sec:Stylized_Facts}
 Before the subprime crisis and the subsequent Great Recession (GR, 2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
 Perhaps, this lack of attention can be explained by the small share of residential investment on aggregate demand (see figure \ref{fig:share}).
@@ -98,7 +99,7 @@ In this sense, he builds a model dedicated for the latter type of investment, em
 	\caption{Expenditures share on GDP}
 	\label{fig:share}
 \begin{figure}[htb]
-    \includegraphics[width = \textwidth]{./figs/Share_AD.png}
+    \includegraphics[width = \textwidth]{./figs/Share_AD_grey.png}
     \end{figure}
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' Elaboration}
 \end{figure}
@@ -160,7 +161,7 @@ Other studies have shown that real estate inflation is the main determinant of h
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with determinants of the latter.
 \section{Determinants of residential investment: review of empirical literature}
-\label{sec:org57825d1}
+\label{sec:org54d4932}
 \label{sec:empirical_review}
 As we have seen in the previous session, there has been a growing attention to the macroeconomic implications of residential investment. It is worth noting, there is a vast empirical literature on housing. However, this literature is mainly focused on urban and regional economics or microeconomic issues. As a consequence, few econometric papers analyze housing in macroeconomic terms. Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically. In this section, we review papers that analyse the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries.
 
@@ -199,74 +200,76 @@ In order to do so, they estimate a VECM between a monetary aggregate (M2), GDP, 
 They report an increasing contribution of long-term mortgages interest rate in order to explain resident investment variance after those institutional changes mentioned above.
 
 
-Table \ref{tab:summary_models} shows an overview of the discussed topics and its main conclusions.
-Each table entry contains the paper's sample, estimation method and its covariates.
+Finally, Table \ref{tab:summary_models} shows an overview of the discussed papers.
+Each table entry contains its sample, estimation method and covariates.
+In general, some authors deflate the rate of interest by the CPI, while others use nominal interest rate to capture the effect of monetary illusion.
 In the next section, we purpose and estimate an alternative for the residential investment in the US.
 
 
 \input{tabs/EmpiricalMotivation}
 
 \section{Macroeconometric analysis}
-\label{sec:org31687c3}
+\label{sec:orgbd64336}
 \label{sec:VECM}
 \subsection{Houses' own interest rate and residential investment growth rate in the US Economy}
-\label{sec:org47b6c8e}
+\label{sec:orga96f218}
 \label{sc:own}
 
-From the previous review of the empirical literature, we conclude that may be the only consensus about the determinants of residential investment is on house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy).
-Some authors deflate the rate of interest by the CPI, others use nominal interest rate to capture the effect of monetary illusion.
-In this section, we present a particular and parsimonious way of combining house prices and mortgage rate of interest in a single index that we will use on our econometric estimation.
+From the previous section, we conclude that may be the only consensus about the determinants of residential investment is on house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy).
+In this section, we present a particular and parsimonious way of combining those two variables  in a single index that we will use on our econometric estimation.
 
-Based on the recent US housing boom episode and its consequences, \textcite{teixeira_crescimento_2015}  proposed the houses own rate of interest (\(own\)).
-Inspired by \citeauthor*{sraffaDrHayekMoney1932} \citeyear*{sraffaDrHayekMoney1932} own commodity rate, this variable is the mortgage interest rate (\(r_{mo}\)) deflated by real estate inflation (\(\pi\)) as follows:
+Based on the recent US housing boom episode, \textcite{teixeira_crescimento_2015}  proposed the houses own rate of interest (\(own\)).
+Inspired by \citeauthor*{sraffaDrHayekMoney1932}'s \citeyear{sraffaDrHayekMoney1932} own commodity rate, this variable is the mortgage interest rate (\(r_{mo}\)) deflated by real estate inflation (\(\pi\)) as follows:
 \begin{latex}
 \begin{equation}
-owm =  \overbrace{\left(\frac{1+r_{mo}}{1+\pi} - 1\right)}
+\label{txpropria}
+owm =  \left(\frac{1+r_{mo}}{1+\pi} - 1\right)
 \end{equation}
 \end{latex}
-In sum, this particular real interest rate is the most relevant for households since it is the real cost in real estate from buying real estate  \cite[p.~53]{teixeira_crescimento_2015}.
+Equation \ref{txpropria} represents this particular real interest rate which is the most relevant for households.
+This is the case because it is the real cost in real estate from buying real estate  \cite[p.~53]{teixeira_crescimento_2015}.
 
-\textcite{teixeira_crescimento_2015} also show that this simple procedure is relevant to describe residential investment growth rate (\(g_{I_{h}}\)).
-Figure \ref{propria_investo} illustrates how this deflation procedure is more adequate than a general price index --- as
-\textcite[p.~143--6]{fair_macroeconometric_2013} does --- to describe the residential investment dynamics.
-Equation \ref{gihown} presents the negative relation between houses own rate of interest and residential investment in the simplest functional form as possible:
+\textcite{teixeira_crescimento_2015} also uses this procedure to describe residential investment growth rate (\(g_{I_{h}}\), see Figure \ref{propria_investo}).
+Equation \ref{gihown} presents the negative relation between houses own rate of interest and residential investment in a simple functional form as possible:
 \begin{equation}
 \label{gihown}
 g_{I_h} = \phi_0 - \phi_1\cdot own
 \end{equation}
-where \(\phi_0\) stands for long-term determinants (\emph{e.g.} demographic factors, housing and credit policies, etc.) while \(\phi_1\) captures the demand for real estate arising from expectations of capital gains resulting from speculation with the existing dwellings stock.
-
+where \(\phi_0\) stands for long-term determinants (\emph{e.g.} demographic factors, housing and credit policies, etc.) while \(\phi_1\) captures the price-interest rate sensibility of demand for houses.
+Additionally, the latter parameter also include the residential investment demand arising from expectations of capital gains resulting from speculation with the existing dwellings stock.
+During a housing bubble period (\emph{e.g.} 2002-5 in the US), it is real estate inflation that governs houses own rate of interest.
+So, the lower this rate is, the greater the capital gains (in real estate) for speculating with real estate will be.
+However, this not imply that all demand for houses during this period will be determined only by speculative purposes.
 
 \begin{figure}[htb]
 	\centering
-	\caption{Residential investment growth rate vs. Houses Own interest rate}
+	\caption{Residential investment growth rate vs. Houses Own rate of interest}
 	\label{propria_investo}
 	\includegraphics[width=\textwidth]{./figs/TxPropria_Investo.png}
 	\caption*{\textbf{Source:} U.S. Bureau of Economic Analysis, Authors' elaboration}
 \end{figure}
 
-Despite shedding light on some relevant relationships, \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition was not evaluated econometrically.
-Before we move forward to the empirical estimations, it is worth noting that during a housing bubble period, it is real estate inflation that governs houses own rate of interest.
-So, the lower this rate is, the greater the capital gains (in real estate) for speculating with real estate will be.
-
+Despite shedding light on connection between house prices, mortgage interest rate and residential investment, \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition has not been evaluated econometrically and this is our objective.
+More recently, \textcite{petrini_2021_TD} simulated a Stock-Flow Consistent model for the US with the already mentioned houses own rate of interest.
+They present a demand-led growth model in which residential investment leads the business cycle and report some of the stylized facts presented in Section \ref{sec:Stylized_Facts}.
+In this sense, our model extends their to an econometric direction.
 
 \subsection{Data and estimation strategy}
-\label{sec:orgc14cd86}
+\label{sec:orgb0efdf0}
 \label{sec:estimation}
 
 
 In this section, we estimate a model to test whether or not houses own rate of interest describes residential investment growth rate movements.
-Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis (see Table \ref{structbreak} in appendix \ref{appen:A} for structural break tests)\footnote{This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households. As a consequence, real estate finance has increased considerably in the following periods.}
+Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis (see Table \ref{structbreak} in appendix \ref{appen:A} for structural break tests)\footnote{This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households. As a consequence, real estate finance has increased considerably in the following periods.}.
 We rely on the following  quarterly seasonally adjusted data: (i) 30-Year fixed mortgage interest rate (MORTGAGE30US, resampled by end of period), private residential investment (PRFI, growth rate as percent change from the previous quarter) and Case-Shiller home price index
 (CSUSHPISA, resampled by end of period).
-
+Additionally, we consider mortgage interest rate as an exogenous variable in all tests and estimations.
 
 
 Since we are interested in growth rate variables, we apply \textcite{yeo_new_2000} transformation procedure due to non-positive values.
-Additionally, we consider mortgage interest rate as an exogenous variable in all tests and estimations.
 Then, we employ standard unit root tests (see Table \ref{unitroot} in appendix \ref{appen:A}) as well as \textcite{johansen_estimation_1991} procedure to assess whether houses own rate of interest and residential investment growth rate share a common long-run trend (see Table \ref{Johansen} in appendix \ref{appen:A}).
-We report a 5\% significance level which allows us to estimate a error correction model \cite{enders_applied_2014}.
-To do so, we assume the following long-run relationship:
+At a 5\% significance level, we conclude that the series are cointegrated, which allows us to estimate a error correction model \cite{enders_applied_2014}.
+In order to do so, we assume the following long-run relationship:
 
 \begin{latex}
 \begin{equation}
@@ -280,60 +283,57 @@ next, we specify the short-run adjustment process of Equation \ref{gihLR} as fol
 \begin{bmatrix}
 \Delta own_{t}\\
 \Delta g_{I_{h_{t}}}
-\end{bmatrix} = \begin{bmatrix}\delta_{1}\\\delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t}}} - \phi_{0} + \phi_{1}\cdot own_{t}\\g_{I_{h_{t}}} - \phi_{0} + \phi_{1}\cdot own_{t}\end{bmatrix} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} \Delta g_{I_{h_{t-i}}} & \gamma_{1,i} \Delta own_{t-i}\\\beta_{2,i} \Delta g_{I_{h_{t-i}}} & \gamma_{2,i} \Delta own_{t-1} \end{bmatrix} + \varepsilon_{t}
+\end{bmatrix} = \begin{bmatrix}\delta_{1}\\ \delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t-1}}} - \phi_{0} + \phi_{1}\cdot own_{t-1}\\g_{I_{h_{t-1}}} - \phi_{0} + \phi_{1}\cdot own_{t-1}\end{bmatrix}^{\prime} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} & \gamma_{1,i} \\\beta_{2,i} & \gamma_{2,i} \end{bmatrix} \begin{bmatrix}\Delta g_{I_{h_{t-i}}} \\\Delta own_{t-i}\end{bmatrix} + \varepsilon_{t}
 \end{equation}
-where \(\delta_s\) indicate linear trend (level);
-\(\alpha_{is}\) are the error correction coefficients;
-\(\beta_s\) and \(\gamma_s\) are coefficients associated with lagged \(g_{I_h}\) and \(own\) respectively and; \(\varepsilon_s\) are the residuals.
-Based on \textcite{teixeira_crescimento_2015}, we depict the expected results in Table \ref{resultados_esperados} below:
+where \(\delta\) indicate linear trend (level);
+\(\alpha\) are adjustment parameters;
+\(\beta\) and \(\gamma\) are coefficients associated with lagged \(g_{I_h}\) and \(own\) respectively and; \(\varepsilon\) are the residuals.
+
+Considering the simple functional form of equation \ref{gihown} and based on \textcite{teixeira_crescimento_2015}, we depict the expected results in Table \ref{resultados_esperados}.
+At this point, it worth clarify an empirical strategy.
+Originally, houses own rate of interest effect on residential investment  is a result of future real estate inflation.
+This dynamic could be captured by its \textbf{expected} value.
+However, such series does not exist.
+So, in the absence of a series for the expected houses own rate of interest, the lag of this variable will be used as a proxy for the future one.
+This procedure is similar to \textcite{keynes_general_1937} ``practical theory of the future'' in which decision-making process for buying a new asset (in this case, houses) depends on expectations/conventions based on past observations.
 
 
 \input{./tabs/hypothesis.tex}
 
+Other relevant question is about economic meaning of Granger causality displayed in Table \ref{resultados_esperados} (hypothesis 2 and 3).
+We assume that houses own rate of interest autonomously determined residential investment.
+The reason for that is the significantly smaller volume of residential investment (newly constructed homes) compared to existing housing stock.
+As a consequence, speculation with the dwellings stock generates inflation of these assets, which affects the construction of new houses (flow) and not the other way around (hypothesis 7).
+In this sense, we expect that \(own\) is weakly exogenous compared to \(g_{I_{h}}\).
 
-The next step is to define the model order. According to usual information criteria, both first and forth lags are eligible (see Table \ref{criterios} in appendix \ref{appen:A}).
-Although parsimonious, we argue that the first lag has no empirical support.
-According to the Survey of Construction (Citar), the average construction time (from approaval to completion from 1976 to 2018) for a family unity for sale is approximately seven months.
-Thus, we should include at least the second lag in order to incorporate homes built for capital gains purposes which only take place once the construction is completed.
-
-DISCUSSÃO ECONÔMICA (LUCAS).
-We argue that there is other economic intuition to explain the forth lag specification.
-Residential investment (newly constructed homes) is significantly smaller than existing housing stock, we verify an price-effect even if the construction is unfinished\footnote{\textcite{poterba_tax_1984}, for instance, suggests that the time that houses takes to be sold should be include.}.
-We argue that this price effect is a result of future real estate inflation.
-Such dynamic could be captured by the \textbf{expected} houses' own interest rate.
-However, such series does not exist.
-So, we use lagged houses' own interest rate as a first approximation to the expected one\footnote{This procedure is similar to \textcite{keynes_general_1937} ``practical theory of the future'' in which decision-making process for buying a new property depends on expectations/conventions based on past observations.
-In summary, in the absence of a series for the expected own interest rate, the lag of this variable will be used as a proxy for the future one.}.
-
-\textbf{Lucas:} Este parágrafo descreve a figura que descartamos, mas imaginei que poderia aproveitar alguma coisa para discutir a autonomia da taxa própria em relação ao investimento residencial (aproveitei e mudei a nota de rodapé do Leamer para o corpo do texto).
-In order to display the relation between lagged own interest rate and current residential investment growth rate, Figure \ref{defasagens} depicts one variable of interest against the other variable lagged according to lags that minimize the information criteria (1 and 4 respectively).
-This simple procedure allows checking if there is any relationship between the expected own interest rate (in this case, lagged effective rate) and residential investment growth rate.
-In the same Figure, we verify the non-occurrence of the inverse relationship from residential investment to own interest rate.
-Since residential investment (flow) is much lower than the existing stock of dwellings, it is expected that such relationship does not exist.
-In summary, speculation with the dwellings stock generates inflation of these assets, which affects the construction of new houses (flow) and not the other way round.
-It is worth noting a particular aspect of house price formation: land scarcity. As a consequence, speculation with residences is, in the end, speculation with land (the only scarce resource involved in its production) and, therefore, it is relevant for speculation with the dwellings stock \cite[p.~349]{leamer_housing_2007}.
+After presenting the economic reasoning reagarding houses own rate of interest,  the next step is to define the model order.
+According to usual information criteria, both first and forth lags are eligible (see Table \ref{criterios} in appendix \ref{appen:A}).
+Despite its parsimony, we argue that the first lag has no empirical support.
+According to the US Survey of Construction (SoC), the average construction time (from approval to completion from 1976 to 2018) for a family unity for sale is approximately seven months.
+Both houses construction time by contract or by the owner, on the other side, takes approximately 8-12 months to conclude.
+In this sense, in order to incorporate homes built for capital gains purposes, which only take place once the construction is completed, we should include at least the second lag.
+Thus, a VEC model with four lags seems more adequate than using just the first one.
 
 
 Considering this theoretical and econometric discussion of model order specification, we estimate a four lag VEC  (see Table \ref{Estimacao}).
 In addition to being theoretically based, this lag order also generates homoscedastic residuals without serial auto-correlation (see Table \ref{testes_resduos} in Appendix \ref{appen:A}).
-Table \ref{testes_resduos} in Appendix \ref{appen:A} presents residual tests to check the model's specification while Table \ref{tab:robust} presents some robustness check.
-On the following subsection, we analyze the results and compare with the theoretical expected ones presented in Table \ref{resultados_esperados} above.  
-
-
+We also report that our estimation is robust and not sensible to the lag order specification (see Table \ref{tab:robust} for robustness check).
+On the following subsection, we analyze the results and compare with the theoretical expected ones presented in Table \ref{resultados_esperados}.
 
 
 \subsection{Estimation results}
-\label{sec:org1d500cf}
+\label{sec:org1b645a8}
 \label{sec:results}
 
 According to parameters presented in Table \ref{Estimacao}, we find statistically significant co-integration  coefficients for both equations. 
 Therefore, both variables share a (negative) long-run trend (validating hypotheses 1 and 4).
-The short-term relationship between \(own\) and \(g_{Ih}\) (\(\beta_{1, is}\) coefficients) are not statistically significant at 5\%\footnote{The expected result (7) can also be validated from the inspection of Table \ref{Estimacao} in which only the fourth lag of own interest rate equation is statistically significant.}.
-In addition, coefficients \(\gamma_{2,s}\) are negative and statistically significant at 5\%, supporting hypothesis 6 (see Table  \ref{Estimacao}).
+The short-term relationship between \(own\) and \(g_{Ih}\) (\(\beta_{1, is}\) coefficients) are not statistically significant at 5\%.
+In addition, coefficients \(\gamma_{2,s}\) are negative and statistically significant at 5\%, supporting hypothesis 6.
 We also find statistically significant coefficients related to demand for houses for non-speculative reasons (\(\phi_0\)), validating proposition 5.
 On the other hand, the error correction parameter is statistically significant only for the residential investment growth rate equation.
 In this sense, \(own\) is weakly exogenous compared to \(g_{I_h}\) while houses own rate of interest Granger-causes \(g_{I_h}\), supporting the hypothesis (2) and (3).
-In conclusion, our estimation results are in line with the hypothesis presented above and can be summarized as follows: houses own rate of interest determines --- but is not determined by --- residential investment growth rate and these variables present a negative long-term relationship (are co-integrated).
+Since the forth lag of houses own rate of interest is the only statiscally significantly one at 5\% level, we also support hypothesis 7.
+In conclusion, our estimation results are in line with the expected ones and can be summarized as follows: houses own rate of interest determines --- but is not determined by --- residential investment growth rate and these variables present a negative long-term relationship.
 
 \begin{table}[h!]
 	\caption{Estimation parameters}
@@ -341,10 +341,22 @@ In conclusion, our estimation results are in line with the hypothesis presented 
 	\input{./tabs/parameters.tex}
 	\caption*{\textbf{Source:} Authors' elaboration}
 \end{table}
-DISCUSSÃO DO COEFICIENTE DE COINTEGRAÇÃO
+Next, we analyze the orthogonilized impulse response function (OIRF, see Figure \ref{irf}).
+In order to do so, we employ the Cholesky decomposition procedure by assuming that houses own rate of interest is more ``exogenous'' than residential investment growth rate.
+We report a decreasing effect of a \(g_{I_h}\) shock on itself over time while a shock of own rate of interest on itself has a non-explosive permanent effect.
+On the other hand, an increase in \(g_{I_h}\) has a null effect over \(own\).
+The most relevant result reported in Figure \ref{irf} is the considerable and lasting negative effect due to an increase in houses own rate of interest over \(g_{I_h}\), validating \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition.
 
-Figure \ref{fevd} display the forecast error variance decomposition (FEVD) which reports houses own rate of interest in describing residential investment growth rate dynamics\footnote{It is important to note that the number of variables (two) used generates similar  of a Structural VEC, which means that Choleski's decomposition is sufficient to analyze the (orthogonalized) impulse response function.}.
-We report that houses own rage of interest has  depicted  \(g_{Ih}\) --- while the reverse is not valid --- after the first quarter.
+\begin{figure}[H]
+	\centering
+	\caption{Orthogonalized Impulse Response Function}
+	\label{irf}
+	\includegraphics[height=.4\textheight]{./figs/Impulse_VECMOrth_grey.png}
+	\caption*{\textbf{Source:} Authors' elaboration}
+\end{figure}
+
+Figure \ref{fevd} display the forecast error variance decomposition (FEVD).
+We report that houses own rate of interest describes \(g_{Ih}\) --- while the reverse is not valid --- after the first quarter.
 In addition, we find that such contribution is greater than 50\% beyond the third quarter (dashed line in Figure \ref{fevd}).
 Therefore, houses own rate of interest is explained mainly by itself and explains \(g_{I_h}\) considerably.
 
@@ -356,32 +368,20 @@ Therefore, houses own rate of interest is explained mainly by itself and explain
 	\caption*{\textbf{Source:} Authors' elaboration}
 \end{figure}
 
-Next, we analyze the orthogonilized impulse response function (Figure \ref{irf}).
-We report a stable system since the increase in \(g_{I_h}\) on itself are dampened over time while equivalent shock on own interest rate has a non-explosive permanent effect.
-On the other hand, an increase in \(g_{I_h}\) has a null effect over \(own\).
-The most relevant result reported in Figure \ref{irf} is the considerable and lasting negative effect due to an increase in own interest rate over \(g_{I_h}\), validating \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition.
 
-\begin{figure}[H]
-	\centering
-	\caption{Orthogonalized Impulse Response Function}
-	\label{irf}
-	\includegraphics[height=.4\textheight]{./figs/Impulse_VECM.png}
-	\caption*{\textbf{Source:} Authors' elaboration}
-\end{figure}
-
-
-Next,  we contrast our findings with those obtained by the literature.
-At this stage, we restrict the comparison with  \textcite{gauger_residential_2003} and \textcite{arestis_residential_2015} since both of them analizy residential investment determinants in a comparable timespan.
+Finally,  we contrast our findings with those discussed in Section \ref{sec:empirical_review}.
+At this stage, we restrict the comparison with  \textcite{gauger_residential_2003} and \textcite{arestis_residential_2015} since both of them analyze residential investment determinants after the institutional changes of the 90's.
 Similar to \textcite{gauger_residential_2003}, we report that mortgage interest rate is relevant for residential investment.
-Our estimations are also in line with \textcite{arestis_residential_2015} (at least for the US).
+Our results regarding the positive price effect on residential investment are in line with \textcite{arestis_residential_2015} (at least for the US).
 However, they report statistically insignificant coefficients for mortgages nominal interest rate which is at odds with our conclusions.
+
 In summary, our estimation reports that houses own rate of interest has a prominent role in describing residential investment growth rate movements.
-Finally, it is worth noting that despite the amplitude of VEC order, our model is parsimonious considering the number of variables used.
-Thus, we conclude that our estimation depicts residential investment growth rate satisfactorily.
+Finally, it is worth noting that despite the amplitude of VEC order, our model is parsimonious considering the number of variables considered.
+Thus, we conclude that our estimation depicts residential investment growth rate satisfactorily given its parsimony.
 On the following section we present some concluding remarks.
 
 \section{Concluding Remarks}
-\label{sec:org74671e1}
+\label{sec:org9da904e}
 \label{sec:Conclusion}
 In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
 To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
@@ -390,14 +390,9 @@ We report:
 	(i) Houses' own interest rate (\(own\)) and residential investment growth rate (\(g_{I_h}\)) share a common long-run trend;
 	(ii) \(g_{I_h}\) effects over \(own\) are negligible and; 
 	(iii) own interest rate has a negative effect on \(g_{I_h}\) and is its main determinant (see Figure \ref{fevd}).
-Besides being parsimonious, our estimations does not show residuals serial autocorrelation and heteroscedasticity. Thus, our results are quite satisfactory.
+Besides being parsimonious, our estimations does not show residuals serial autocorrelation and heteroscedasticity.
+Finally, our results are robust.
 
-It remains to contrast our findings with those obtained by \textcite{arestis_residential_2015}.
-It worth remembering that one of the authors' hypotheses is that residential investment depends on disposable income (is induced expenditure).
-However, the authors themselves find that such results are not statistically significant for the US. Therefore, we can compare this result with our model.
-Despite the differences, some results of the model are in line with those of \textcite{arestis_residential_2015}.
-Among them, house prices relevance in determining residential investment dynamics for the US.
-However, they report insignificant coefficients for mortgages nominal interest rate, that is, the opposite conclusion of our model.
 
 In conclusion,  we report lack of work analyzing residential investment in a Sraffian supermultiplier-friendly framework in the macroeconometric literature.
 Our estimation supports houses' own interest rate relevance in describing residential investment growth rate for the US as depicted by \textcite{teixeira_crescimento_2015}.
@@ -408,22 +403,22 @@ Thus, our  proposal differs from the usual empirical literature by:
 
 
 \section*{Acknowledgments}
-\label{sec:orge894c72}
+\label{sec:orgd341529}
 \noindent The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We are grateful to Rosângela Ballini, Carolina Baltar, Júlia Braga, Ítalo Pedrosa, Cecon/Unicamp and UFRJ Macroeconomic discussion groups for useful comments and suggestions on earlier drafts of this article. All remaining errors are, of course, our own.
 
 
 \section*{Disclosure statement}
-\label{sec:orgdc8e4b6}
+\label{sec:org29e79d7}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:org163785b}
+\label{sec:org7a114a2}
 \printbibliography[heading=none]
 
 
 \appendix
 \section{Statistical Appendix}
-\label{sec:org4ccaae8}
+\label{sec:org23a66d7}
 \label{appen:A}
 
 In this appendix we report several tests: unit root tests on our variables of interest, Structural break test, Johansen procedure and hypothesis tests on residuals. 
