Correções pós leitura Lucas

--- a/Articles/VECM/Empirical_Review.org
+++ b/Articles/VECM/Empirical_Review.org
@@ -164,8 +164,8 @@ They report an increasing contribution of long-term mortgages interest rate in o
 
 
 Finally, Table ref:tab:summary_models shows an overview of the discussed papers.
-Each table entry contains its sample, estimation method and covariates.
-In general, some authors deflate the rate of interest by the CPI, while others use nominal interest rate to capture the effect of monetary illusion.
+Each table entry contains the paper sample, estimation method and covariates.
+# In general, some authors deflate the rate of interest by the CPI, while others use nominal interest rate to capture the effect of monetary illusion.
 In the next section, we purpose and estimate an alternative for the residential investment in the US.
 
 
