Nova introdução e conclusão

--- a/Articles/VECM/Introduction.org
+++ b/Articles/VECM/Introduction.org
@@ -13,20 +13,26 @@ For the US, \textcite{girardi_long-run_2016} show that autonomous expenditures d
 \textcite{haluska_growth_2019} employ Granger-causality tests to assess the stability of the SSM for the US (1987-2017). They find: (i) causality goes from autonomous expenditures to the marginal propensity to invest; (ii) induced investment share has a higher temporal persistence and presents slow and statistically significant adjustment rate to demand growth, as described by the SSM.
 #+END_COMMENT
 
-* Introduction                                                       :ignore:
-
 Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
 As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated cite:brochier_macroeconomics_2017.
 The Sraffian supermultiplier (SSM) model presented by textcite:serrano_long_1995 establishes a prominent role for non-capacity creating autonomous expenditures in the theoretical ground.
 Despite the late interest in those expenditures cites:freitas_pattern_2013,girardi_long-run_2016,girardi_autonomous_2018,braga_investment_2018, there still is a lack of studies on the role of residential investment in particular.
 
-Our main objective is to assess the determinants of residential investment growth rate.
-We argue that the scarce attention that residential investment receives is not compatible with its relevance for the US and its significance is not restricted to the Great Recession.
-In Section ref:sec:Stylized_Facts, we present some stylized facts for the US economy highlighting the relevance of residential investment.
-Next, in Section ref:sec:empirical_review, we will present and compare different macroeconometric models that explicitly incorporate residential investment.
-In Section ref:sec:VECM, we estimate a bi-dimensional vector error-correction model (VECM) using time-series data for the US economy from 1992 onward to test the houses' own interest rate presented by textcite:teixeira_crescimento_2015. 
-Section ref:sec:Conclusion offers some concluding remarks.
-The results for all statistical tests are provided in Appendix ref:appen:A.
+* Introduction                                                       :ignore:
 
+Among aggregate demand expenditures, non-residential investment is one of the most examined between economists.
+As a consequence, the relevance of others expenditures on macroeconomic dynamics has been underestimated cite:brochier_macroeconomics_2017.
+After the Great Recession this landscape has changed.
+More recently, other expenditures have been scrutinized under the demand-led growth agenda cites:freitas_pattern_2013,girardi_long-run_2016,girardi_autonomous_2018,braga_investment_2018.
+However, few studies focus on the role of residential investment in particular cite:petrini_2021_TD.
+We argue that the scarce attention that it receives is not compatible with its macroeconomic relevance.
 
+Besides the late interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth cite:fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021, there are some controversial about its determinants.
+Our main objective is to present and evaluate a parsimonious way to describe residential investment rate of growth.
+In Section ref:sec:Stylized_Facts, we discuss the macroeconomic relevance of residential investment regarding the US case.
+Next, in Section ref:sec:empirical_review, we review different macroeconometric models that estimate residential investment determinants.
+In Section ref:sec:VECM, we estimate a bi-variate vector error-correction model (VECM) using time-series data for the US economy from 1992 to 2019.
+Section ref:sec:Conclusion closes the paper.
+We conclude that the proposed index describes residential investment growth rate while the opposite direction does not occur.
+The results for all statistical tests and robustness check are provided in Appendix ref:appen:A.
 
