--- a/Articles/VECM/Conclusion.org
+++ b/Articles/VECM/Conclusion.org
@@ -1,19 +1,18 @@
 
-In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
-To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
-proposal. 
-We report: 
-	(i) Houses' own interest rate ($own$) and residential investment growth rate ($g_{I_h}$) share a common long-run trend;
+
+In this article, we present a parsimonious specification for residential investment growth rate based on houses own rate of interest proposed by textcite:teixeira_crescimento_2015.
+RETOMAMOS TAXA PROPRIA?
+
+
+Considering this concept, we estimate a bi-variate VEC model for the US economy from 1992 to 2019.
+We base the sample and lag order selection both on econometric and economic criterias.
+Our results are:
+	(i) Houses own rate of interest ($own$) and residential investment growth rate ($g_{I_h}$) share a common long-run trend;
 	(ii) $g_{I_h}$ effects over $own$ are negligible and; 
-	(iii) own interest rate has a negative effect on $g_{I_h}$ and is its main determinant (see Figure \ref{fevd}).
+	(iii) houses own rate of interest has a negative effect on $g_{I_h}$ and is its main determinant.
 Besides being parsimonious, our estimations does not show residuals serial autocorrelation and heteroscedasticity.
-Finally, our results are robust.
+Additionally, the results are not sensible lag order specification and most expected results remain valid in a economically relevant time horizon.
 
-
-In conclusion,  we report lack of work analyzing residential investment in a Sraffian supermultiplier-friendly framework in the macroeconometric literature.
-Our estimation supports houses' own interest rate relevance in describing residential investment growth rate for the US as depicted by \textcite{teixeira_crescimento_2015}.
-Thus, our  proposal differs from the usual empirical literature by:
-	(i) considering housing as a non-capacity creating autonomous expenditure;
-	(ii) reporting that mortgage interest rates are relevant to describe long-run residential investment dynamics; and notably 
-	(iii) including asset bubble through houses own interest rate.
-
+This paper is just a step towards an broad and emerging heterodox macroeconomic housing agenda.
+A better comprehension of the connection between housing financial system and mortgage market institutional particularities could enlighten this discussion.
+Further studies could also evaluate whether or not houses own rate of interest validity is restrict to the US.
