--- a/Articles/VECM/Petrini_VECM_2021.tex
+++ b/Articles/VECM/Petrini_VECM_2021.tex
@@ -1,4 +1,4 @@
-% Created 2021-03-24 qua 15:32
+% Created 2021-03-25 qui 10:48
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
@@ -51,12 +51,12 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 
 
 \begin{abstract}
-This article investigates the relationship between residential investment, asset inflation, and macroeconomic dynamics based on
-the US post-deregulation case (1992-2019). To do so, we estimate a vector error correction model (VECM) to asses the relevance of
-real interest rate of real estate. We find residential investment growth rate and houses’ own interest rate to be cointegrated. We
-also find that long-run causality goes unidirectionally from houses’ own interest rate to residential investment growth rate,
-as expected. In summary, our findings support the relevance of houses’ own interest rate in determining residential investment
-while the other way round does not occur.
+This article investigates the determinantes of residential investment based on the US post-deregulation case (1992-2019).
+We estimate a vector error correction model (VECM) to evaluate the combination of mortgage interest rate and house prices  into a single index (houses own rate of interest).
+Houses own rate of interest and residential investment growth rate share a negative long-run trend.
+In particular, we find that long-run causality goes unidirectionally from houses own rate of interest to residential investment growth rate.
+As expected, residential investment growth rate effects on houses own rate of interest are not statistically significant.
+Estimation results are not sensible to lag order specification and residuals do not present serial autocorrelation and heterocedasticity.
 
 \noindent \textbf{Keywords:} Residential Investment; Asset price inflation; Mortgage Interest rate; Vector-Error correction model\\
 \noindent \textbf{JEL codes:} E39; E44; R39
@@ -64,25 +64,28 @@ while the other way round does not occur.
 
 
 \section{Introduction}
-\label{sec:org2e1f766}
+\label{sec:org68a3e40}
 \label{sec:Introduction}
-Among aggregate demand expenditures, non-residential investment is the most examined  one between (at least) heterodox macroeconomists.
-As a consequence, the relevance of others (autonomous) expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
-The Sraffian supermultiplier (SSM) model presented by \textcite{serrano_long_1995} establishes a prominent role for non-capacity creating autonomous expenditures in the theoretical ground.
-Despite the late interest in those expenditures \cites{freitas_pattern_2013}{girardi_long-run_2016}{girardi_autonomous_2018}{braga_investment_2018}, there still is a lack of studies on the role of residential investment in particular.
+Among aggregate demand expenditures, non-residential investment is one of the most examined between economists.
+As a consequence, the relevance of others expenditures on macroeconomic dynamics has been underestimated \cite{brochier_macroeconomics_2017}.
+After the Great Recession this landscape has changed.
+More recently, other expenditures have been scrutinized under the demand-led growth agenda \cites{freitas_pattern_2013}{girardi_long-run_2016}{girardi_autonomous_2018}{braga_investment_2018}.
+However, few studies focus on the role of residential investment in particular \cite{petrini_2021_TD}.
+We argue that the scarce attention that it receives is not compatible with its macroeconomic relevance.
 
-Our main objective is to assess the determinants of residential investment growth rate.
-We argue that the scarce attention that residential investment receives is not compatible with its relevance for the US and its significance is not restricted to the Great Recession.
-In Section \ref{sec:Stylized_Facts}, we present some stylized facts for the US economy highlighting the relevance of residential investment.
-Next, in Section \ref{sec:empirical_review}, we will present and compare different macroeconometric models that explicitly incorporate residential investment.
-In Section \ref{sec:VECM}, we estimate a bi-dimensional vector error-correction model (VECM) using time-series data for the US economy from 1992 onward to test the houses' own interest rate presented by \textcite{teixeira_crescimento_2015}. 
-Section \ref{sec:Conclusion} offers some concluding remarks.
-The results for all statistical tests are provided in Appendix \ref{appen:A}.
+Besides the late interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth \cite{fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021}, there are some controversial about its determinants.
+Our main objective is to present and evaluate a parsimonious way to describe residential investment rate of growth.
+In Section \ref{sec:Stylized_Facts}, we discuss the macroeconomic relevance of residential investment regarding the US case.
+Next, in Section \ref{sec:empirical_review}, we review different macroeconometric models that estimate residential investment determinants.
+In Section \ref{sec:VECM}, we estimate a bi-variate vector error-correction model (VECM) using time-series data for the US economy from 1992 to 2019.
+Section \ref{sec:Conclusion} closes the paper.
+We conclude that the proposed index describes residential investment growth rate while the opposite direction does not occur.
+The results for all statistical tests and robustness check are provided in Appendix \ref{appen:A}.
 
 
 
 \section{Residential investment, economic growth and business cycle in the US economy}
-\label{sec:org36f3f5d}
+\label{sec:org3a29557}
 \label{sec:Stylized_Facts}
 Before the subprime crisis and the subsequent Great Recession (GR, 2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
 Perhaps, this lack of attention can be explained by the small share of residential investment on aggregate demand (see figure \ref{fig:share}).
@@ -161,7 +164,7 @@ Other studies have shown that real estate inflation is the main determinant of h
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
 On the following section, we analyze how econometric literature has dealt with determinants of the latter.
 \section{Determinants of residential investment: review of empirical literature}
-\label{sec:orgde7c802}
+\label{sec:org661dc22}
 \label{sec:empirical_review}
 As we have seen in the previous session, there has been a growing attention to the macroeconomic implications of residential investment. It is worth noting, there is a vast empirical literature on housing. However, this literature is mainly focused on urban and regional economics or microeconomic issues. As a consequence, few econometric papers analyze housing in macroeconomic terms. Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically. In this section, we review papers that analyse the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries.
 
@@ -209,10 +212,10 @@ In the next section, we purpose and estimate an alternative for the residential 
 \input{tabs/EmpiricalMotivation}
 
 \section{Macroeconometric analysis}
-\label{sec:org4481656}
+\label{sec:org81b3c99}
 \label{sec:VECM}
 \subsection{Houses' own interest rate and residential investment growth rate in the US Economy}
-\label{sec:orgaf6de5e}
+\label{sec:org33e47f9}
 \label{sc:own}
 
 From the previous section, we conclude that house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy) may be the only consensus about residential investment determinants.
@@ -255,7 +258,7 @@ They present a demand-led growth model in which residential investment leads the
 In this sense, our model extends their to an econometric direction.
 
 \subsection{Data and estimation strategy}
-\label{sec:org9ed806e}
+\label{sec:org6a9cf5e}
 \label{sec:estimation}
 
 In this subsection we present the estimation estrategy and the data used to assess whether house own rate of interest index explains the behavior of residential investment rate of growth.
@@ -334,7 +337,7 @@ On the following subsection, we analyze the results and compare with the theoret
 
 
 \subsection{Estimation results}
-\label{sec:org012bfb7}
+\label{sec:org4558d06}
 \label{sec:results}
 
 According to parameters presented in Table \ref{Estimacao}, we find statistically significant co-integration  coefficients for both equations. 
@@ -393,44 +396,43 @@ Thus, we conclude that our estimation depicts residential investment growth rate
 On the following section we present some concluding remarks.
 
 \section{Concluding Remarks}
-\label{sec:org20d8a5c}
+\label{sec:org8f131f9}
 \label{sec:Conclusion}
-In this article, we present a residential investment growth rate specification compatible with the Srrafian supermultiplier model.
-To do so, we estimate a bi-dimension VEC evaluate \textcite{teixeira_crescimento_2015}
-proposal. 
-We report: 
-	(i) Houses' own interest rate (\(own\)) and residential investment growth rate (\(g_{I_h}\)) share a common long-run trend;
+In this article, we present a parsimonious specification for residential investment growth rate based on houses own rate of interest proposed by \textcite{teixeira_crescimento_2015}.
+RETOMAMOS TAXA PROPRIA?
+
+
+Considering this concept, we estimate a bi-variate VEC model for the US economy from 1992 to 2019.
+We base the sample and lag order selection both on econometric and economic criterias.
+Our results are:
+	(i) Houses own rate of interest (\(own\)) and residential investment growth rate (\(g_{I_h}\)) share a common long-run trend;
 	(ii) \(g_{I_h}\) effects over \(own\) are negligible and; 
-	(iii) own interest rate has a negative effect on \(g_{I_h}\) and is its main determinant (see Figure \ref{fevd}).
+	(iii) houses own rate of interest has a negative effect on \(g_{I_h}\) and is its main determinant.
 Besides being parsimonious, our estimations does not show residuals serial autocorrelation and heteroscedasticity.
-Finally, our results are robust.
+Additionally, the results are not sensible lag order specification and most expected results remain valid in a economically relevant time horizon.
 
-
-In conclusion,  we report lack of work analyzing residential investment in a Sraffian supermultiplier-friendly framework in the macroeconometric literature.
-Our estimation supports houses' own interest rate relevance in describing residential investment growth rate for the US as depicted by \textcite{teixeira_crescimento_2015}.
-Thus, our  proposal differs from the usual empirical literature by:
-	(i) considering housing as a non-capacity creating autonomous expenditure;
-	(ii) reporting that mortgage interest rates are relevant to describe long-run residential investment dynamics; and notably 
-	(iii) including asset bubble through houses own interest rate.
+This paper is just a step towards an broad and emerging heterodox macroeconomic housing agenda.
+A better comprehension of the connection between housing financial system and mortgage market institutional particularities could enlighten this discussion.
+Further studies could also evaluate whether or not houses own rate of interest validity is restrict to the US.
 
 
 \section*{Acknowledgments}
-\label{sec:org030c0d1}
+\label{sec:orgce928be}
 \noindent The authors wish to acknowledge the financial support from the Brazilian National Research Council (CNPq; grant 130777/2018-8). We are grateful to Rosângela Ballini, Carolina Baltar, Júlia Braga, Ítalo Pedrosa, Cecon/Unicamp and UFRJ Macroeconomic discussion groups for useful comments and suggestions on earlier drafts of this article. All remaining errors are, of course, our own.
 
 
 \section*{Disclosure statement}
-\label{sec:orge9898e7}
+\label{sec:org12c93c0}
 No potential conflict of interest was reported by the authors.
 
 \section*{References}
-\label{sec:orga37638a}
+\label{sec:org35eeb71}
 \printbibliography[heading=none]
 
 
 \appendix
 \section{Statistical Appendix}
-\label{sec:org2549d24}
+\label{sec:org7190e2a}
 \label{appen:A}
 
 In this appendix we report several tests: unit root tests on our variables of interest, Structural break test, Johansen procedure and hypothesis tests on residuals. 
